recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: not found: value step
  	if (step!0){
            ^