recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  	if (step!0){
  		avance(length)
  		gauche(angle)
  		spiral(steps-1,angle,length+increment,increment)
    }
}